# IBM-fhe-toolkit-Genome

./: .gitignore  README.md  RunToolkit-modified.sh  StopToolkit-modified.sh
Backup/Genome/: CMakeCache.txt  CMakeLists.txt  Genome  Makefile  trial.cpp
Genome/: Genome.cpp  cmake_install.cmake
LR/: MultiLinearRegress.ipynb  PreProcessing.ipynb  PreProcessing.py  PreProcessing.sh
Local/Genome/: CMakeCache.txt  CMakeLists.txt  Genome  Genome.cpp  Makefile  data.txt  fghjk.gtgumkm  mPS.cpp  mPS.h  main.cpp  out.txt  output.txt  weights.txt
Local/Genome/data/: model.h5  test_x.h5  test_y.h5  weights.h5
